--- a/src/landkid/sass/pado.scss
+++ b/src/landkid/sass/pado.scss
@@ -1,5 +1,27 @@
 canvas {
+    display: block;
+}
 
+body {
+    overflow: hidden;
+    position: relative;
+}
+
+.slider {
+    display: block;
+    width: 300px;
+    position: absolute;
+    margin: 20px;
+    top: 0;
+
+    &-label {
+        position: absolute;
+        left: 330px;
+        margin: 20px;
+
+        top: 0;
+
+    }
 }
 
 #round-rect {
@@ -8,9 +30,6 @@ canvas {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 1000px;
-    height: 1000px;
     overflow: hidden;
-    border-radius: 500px;
     border: 5px #000000 solid;
 }
