--- a/src/landkid/sass/responsive-test-mw-768px.scss
+++ b/src/landkid/sass/responsive-test-mw-768px.scss
@@ -1,3 +1,7 @@
+html {
+  font-size: 16px;
+  font-family: "Lucida Sans", sans-serif;
+}
 /* For desktop: */
 .col-1 {
   width: 8.33%;
@@ -39,6 +43,91 @@
 .col-12 {
   width: 100%;
 }
+
+/* For desktop: */
+.col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+.col-3 {
+  width: 25%;
+  &.menu {
+    display:block;
+    position:inherit;
+  }
+}
+.col-4 {
+  width: 33.33%;
+}
+.col-5 {
+  width: 41.66%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
+}
+
+.margin-1 {
+  margin-left: 8.33%;
+}
+.margin-2 {
+  margin-left: 16.66%;
+}
+.margin-3 {
+  margin-left: 25%;
+}
+.margin-4 {
+  margin-left: 33.33%;
+}
+.margin-5 {
+  margin-left: 41.66%;
+}
+.margin-6 {
+  margin-left: 50%;
+}
+.margin-7 {
+  margin-left: 58.33%;
+}
+.margin-8 {
+  margin-left: 66.66%;
+}
+.margin-9 {
+  margin-left: 75%;
+}
+.margin-10 {
+  margin-left: 83.33%;
+}
+.margin-11 {
+  margin-left: 91.66%;
+}
+.margin-12 {
+  margin-left: 100%;
+}
+
+.col-3.menu {
+  display:block;
+  position:inherit;
+}
+
 .col-3.menu {
   display:block;
   position:inherit;
@@ -73,4 +162,16 @@
 }
 .content ul li.content-list-item {
   width: 25%;
+  font-size: 1rem;
+}
+
+.animate-test {
+  &-a {
+    transform: translate(200%, 0);
+    font-size: 1.5rem;
+  }
+  &-b {
+    transform: translate(0, 0);
+    font-size: 1.5rem;
+  }
 }
