--- a/src/landkid/sass/responsive-test.scss
+++ b/src/landkid/sass/responsive-test.scss
@@ -6,7 +6,7 @@
 .row::after {
   content: "";
   clear: both;
-  display: table;
+  display: block  ;
 }
 [class*="col-"] {
   float: left;
@@ -15,6 +15,8 @@
 html {
   font-size: 20px;
   font-family: "Lucida Sans", sans-serif;
+  transition: all 0.3s ease-in;
+
 }
 .header {
   padding: 15px;
@@ -60,6 +62,7 @@ html {
       float:left;
       width: 100%;
       transition: all 0.2s linear 0.2s;
+      font-size: 1rem;
 
       & div.item-content {
         -moz-box-shadow: 0 3px 0.5em #999999;
@@ -71,7 +74,6 @@ html {
         -moz-border-radius: 5px;
         border-radius: 5px;
         height:100%;
-        font-size: 1rem;
         & p.title {
           font-weight: bold;
           margin-bottom: 20px;
@@ -102,14 +104,13 @@ html {
   padding: 15px;
   color: #ffffff;
   text-align: center;
-  font-size: 14px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .footer {
   background-color: #0099cc;
   color: #ffffff;
   text-align: center;
-  font-size: 12px;
+  font-size: 3vw;
   padding: 15px;
 }
 /* For mobile phones: */
@@ -145,15 +146,57 @@ html {
   }
 }
 
-/*@media only screen and (min-width: 480px) {
+img.image {
+  max-width: 100%;
+  height: auto;
+  padding: 20px;
+}
+
+.row-2 {
+  width: 100%;
+  height: auto;
+  &::after {
+    content: " ";
+    display: block;
+    clear:both;
+  }
+}
+
+.animate-test {
+  &-a {
+    width: 50%;
+    transition: all 0.3s ease-in;
+    display: block;
+    transform: translate(0, 0);
+    font-size: 2.0rem;
+  }
+  &-b {
+    width: 50%;
+    transition: all 0.3s ease-in;
+    display: block;
+    transform: translate(0, 0);
+    font-size: 2.0rem;
+  }
+}
+
+//.animate-test {
+//  width: 50%;
+//  transition: all 0.3s ease-in;
+//  display: block;
+//  transform: translate(0, 0);
+//  font-size: 2.0rem;
+//}
+/*
+
+@media screen and (min-width: 480px) {
   .content ul li.content-list-item {
     width: 50%;
   }
 }
 
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-/*.col-1 {
+@media screen and (min-width: 768px) {
+  !* For desktop: *!
+.col-1 {
   width: 8.33%;
 }
 .col-2 {
