--- a/src/landkid/sass/grid.scss
+++ b/src/landkid/sass/grid.scss
@@ -95,14 +95,31 @@
     line-height: 6em;
 }
 
-body::after {
-
-}
-
 @media only screen and (min-width: 320px) and (max-width: 767px){
     [class*="col-"] {
         width: calc(100% - var(--gutter-size));
         margin:  calc(var(--gutter-size) / 2);
+    }
+    .scroll-navi {
+        padding: 0;
+        margin: 0;
+        position: fixed;
+        right: 0.25em;
+        top: calc((100% - 6.375em) / 2);
+        & li {
+            width: auto;
+            border-radius: 0.25em;
+            padding-left: 0.5em;
+            padding-right: 0.25em;
+            line-height: 2em;
+            font-size: 1.25em;
+            margin-bottom: 0.0625em;
+            margin-top: 0.0625em;
+            list-style: none;
+            background-color: #2b2b2b;
+            opacity: 0.8;
+            color: #fff;
+        }
     }
 }
 
@@ -111,9 +128,14 @@ body::after {
         width: calc(50% - var(--gutter-size));
         margin:  calc(var(--gutter-size) / 2);
     }
+    .scroll-navi {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 1280px){
-
+    .scroll-navi {
+        display: none;
+    }
 }
 
