--- a/src/landkid/sass/grid.scss
+++ b/src/landkid/sass/grid.scss
@@ -1,6 +1,14 @@
 :root {
     --gutter-size: 1rem;
 }
+* {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently */
+}
 
 [class*="col-"] {
     float: left;
@@ -105,9 +113,11 @@
         margin: 0;
         position: fixed;
         right: 0.25em;
-        top: calc((100% - 6.375em) / 2);
+        bottom: 1em;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
         & li {
-            width: auto;
+            width: 30px;
             border-radius: 0.25em;
             padding-left: 0.5em;
             padding-right: 0.25em;
